# aiebu1

./: .clang-tidy  .clangd  .gitignore  .gitmodules  AIEBU_USER_MANUAL.rst  CMakeLists.txt  README.rst  vcpkg.json
lib/: CMakeLists.txt
lib/src/: CMakeLists.txt  Makefile  gen-copy.cpp  gen-preemption.cpp
specification/: CMakeLists.txt  spec_tool.py
specification/aie2/: CMakeLists.txt  isa-spec.html  isa-spec.md
specification/aie2ps/: CMakeLists.txt  README.md  isa-spec.html  isa-spec.md  isa-spec.yaml  isa.h  isa_defines.h  isa_stubs.h
specification/aie4/preemption_asm/: aie4_restore_1c.asm  aie4_restore_1c0.asm  aie4_restore_1c1.asm  aie4_restore_1c2.asm  aie4_restore_2c.asm  aie4_restore_3c.asm  aie4_save_1c.asm  aie4_save_1c0.asm  aie4_save_1c1.asm  aie4_save_1c2.asm  aie4_save_2c.asm  aie4_save_3c.asm  generate_aie4_header.py
src/cpp/: CMakeLists.txt
src/cpp/aie-rt/: .clang-tidy  README.rst
src/cpp/aiebu/src/: .clang-tidy  CMakeLists.txt
src/cpp/analyzer/: aie2p_passes.cpp  aie2p_passes.h  basicpass.cpp  basicpass.h  packets.cpp  packets.h  passmanager.cpp  passmanager.h  reporter.cpp  reporter.h  transaction.cpp  transform_manager.cpp  transform_manager.h
src/cpp/assembler/: aiebu_assembler.cpp  assembler.cpp  assembler.h
src/cpp/common/: aiebu_error.cpp  assembler_state.cpp  assembler_state.h  build_info.cpp  build_info.h  code_section.h  disassembler_state.h  file_utils.cpp  file_utils.h  logger.h  metrics.h  regex_wrapper.h  symbol.h  time_util.h  uid_md5.h  utils.cpp  utils.h  writer.cpp  writer.h
src/cpp/common/linux/: metrics.cpp
src/cpp/common/windows/: metrics.cpp
src/cpp/disassembler/: disassembler.cpp  disassembler.h
src/cpp/dtrace/: CMakeLists.txt  dtrace.cpp  dtrace.h  utils.h
src/cpp/dtrace/action/: action_control.cpp  action_control.h  break.cpp  count.cpp  host_timestamp.cpp  host_timestamps.cpp  mask_write_register.cpp  operation.cpp  print.cpp  printa.cpp  profile.cpp  read_handshake.cpp  read_mem.cpp  read_register.cpp  sleep.cpp  timestamp.cpp  timestamp32.cpp  timestamps.cpp  timestamps32.cpp  write_handshake.cpp  (+2 more)
src/cpp/elf/: aie_elf_constants.h  elfwriter.cpp  elfwriter.h
src/cpp/encoder/: encoder.h
src/cpp/ops/: oparg.h  ops.cpp  ops.h
src/cpp/preprocessor/: preprocessed_output.h  preprocessor.h  preprocessor_input.h
src/cpp/tools/: debug_tools.cpp  debug_tools.h  opcode_information.cpp  trace_probe.cpp
src/cpp/utils/: CMakeLists.txt
test/: CMakeLists.txt
test/aie2-ctrlcode/: CMakeLists.txt
test/aie2-ctrlcode/basic/: CMakeLists.txt  gold.md5  ml_txn.ctrltext.asm
test/aie2-ctrlcode/dma_txn_ctrlpkt_pmload/: CMakeLists.txt  README.rst  external_buffer_id.json  gold.md5
test/aie2-ctrlcode/dump/: CMakeLists.txt
test/aie2-ctrlcode/fused/: CMakeLists.txt  gold.md5
test/aie2-ctrlcode/mladf_txn/: CMakeLists.txt  README.rst  gold.md5
test/aie2-ctrlcode/pmctrlpkt/: CMakeLists.txt  ctrl_pkt.b64  gold.md5  mc_code_txn.ctrlpkt.pm.0.ctrl  mc_code_txn.ctrlpkt.pm.1.ctrl  mc_code_txn.ctrlpkt.pm.2.ctrl  mc_code_txn.ctrlpkt.pm.3.ctrl  mc_code_txn.ctrlpkt.pm.4.ctrl  mc_code_txn.ctrlpkt.pm.5.ctrl  mc_code_txn.ctrlpkt.pm.6.ctrl  mc_code_txn.ctrlpkt.pm.7.ctrl  mc_code_txn.json  pm_ctrlpkt_0.b64  pm_ctrlpkt_1.b64  pm_ctrlpkt_2.b64  pm_ctrlpkt_3.b64  pm_ctrlpkt_4.b64  pm_ctrlpkt_5.b64  pm_ctrlpkt_6.b64  pm_ctrlpkt_7.b64
test/aie2-ctrlcode/rich/: CMakeLists.txt  gold.md5
test/aie2-ctrlcode/save-restore/: CMakeLists.txt  checksums.txt
test/aie2-ctrlcode/transform/: CMakeLists.txt  disassemble-basic.txt  t1.json
test/aie2ps-ctrlcode/: CMakeLists.txt  run-readelf.sh
test/aie2ps-ctrlcode/basic/: CMakeLists.txt  disassemble_golden.asm
test/aie2ps-ctrlcode/dump/: CMakeLists.txt  ctrlcode.asm  disassemble_golden.asm
test/aie2ps-ctrlcode/eff_net_coal/: CMakeLists.txt  config.json  eff_net_coal.gold  gold.md5
test/aie4-ctrlcode/: CMakeLists.txt
test/aie4-ctrlcode/1col_preempt/: CMakeLists.txt  aie4_save_1c.asm  aie_asm_elfs.asm  aie_asm_enable.asm  aie_asm_init.asm  aie_runtime_control.asm  config.json  config_target.json  external_buffer_id.json  gold.md5  gold_target.md5  test.asm  test_target.asm
test/aie4-ctrlcode/1col_preempt_0hint/: CMakeLists.txt  gold.md5  pdi.asm  test.asm
test/aie4-ctrlcode/3col_preempt_0hint/: CMakeLists.txt  config.json  gold.md5  test.asm  uc0.asm  uc2.asm  uc4.asm
test/aie4-ctrlcode/basic/: CMakeLists.txt  aie4_target_basic.asm  gold.md5
test/aie4-ctrlcode/duplicate_include/: CMakeLists.txt  config.json  dup.asm  main.asm  test.asm
test/aie4-ctrlcode/move_ddr_to_memtile_ctrlpkt/: CMakeLists.txt  config.json  external_buffer_id.json  gold.md5  gold_opcode_info.txt  gold_trace_probe.txt  test.asm
test/aie4-ctrlcode/multi_graph/: CMakeLists.txt  config.json  gold.md5
test/aie4-ctrlcode/multi_layer/: CMakeLists.txt  aie_asm_elfs.asm  aie_asm_enable.asm  aie_asm_init.asm  aie_runtime_control.asm  ctrlcode.asm
test/aie4-ctrlcode/opcode_checks/: CMakeLists.txt  config_dup_load_cores_addr.json  config_dup_load_pdi_addr.json  config_load_cores_count_mismatch.json  config_load_cores_cp_count_mismatch.json  config_load_pdi_count_mismatch.json  config_preempt_no_load_pdi.json  config_start_cond_before_preempt.json  config_start_cond_count_mismatch.json  dup_load_cores_addr.asm  dup_load_pdi_addr.asm  load_cores_count_mismatch.asm  load_cores_cp_count_mismatch.asm  load_pdi_count_mismatch.asm  preempt_no_load_pdi.asm  start_cond_before_preempt.asm  start_cond_count_mismatch.asm
test/cmake-test/: CMakeLists.txt  check_and_run.bat  check_and_run.sh
test/cmake-test/sample/: CMakeLists.txt  aie2_test.cpp
test/cpp_test/c_api/: CMakeLists.txt  aie2_test.c  aie2ps_test.c
test/cpp_test/cpp_api/: CMakeLists.txt  aie2_full_elf_test.cpp  aie2_test.cpp  aie2ps_test.cpp  aie4_savetimestamps_test.cpp  aiebu_error_test.cpp
test/dtrace_test/: CMakeLists.txt  dtrace_test.cpp
test/dtrace_test/multi_col/: gold.md5  map.json  multi_uc_6.elf  script.ct
test/dtrace_test/profile/: gold.md5  script.ct
test/dtrace_test/single_col/: gold.md5  map.json  script.ct  simple_int8_orig.elf
(+11000 files in other folders)
